--- a/index.html
+++ b/index.html
@@ -16,8 +16,8 @@
 <body>
  <article class="product">
      <picture class="product_img">
-      <source srcset="images/image-product-desktop.jpg " media="(min-width: 600px)">
-     <img src="images/image-product-mobile.jpg" alt="">
+      <source srcset="image-product-desktop.jpg " media="(min-width: 600px)">
+     <img src="image-product-mobile.jpg" alt="">
      </picture>
 
     <div class="product_content">
